avance con imagenes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section>
         <h2>NUESTRO EQUIPO</h2>
-        <img src="./images/001" alt="Andrés Cubo">
+        <img src="./images/imagenprs1.jpg" alt="Andrés Cubo">
         <h3>Andrés Cubo</h3>
         <p>Diseñador de Productos</p>
         <img src="./images/imagenprs2.jpg" alt="Carla Palacios">
