--- a/portafolio.html
+++ b/portafolio.html
@@ -31,47 +31,47 @@
     <section>
         <ul>
          <li>
-            <img src="./goit-markup-hw-02/Images/White_laptop01.jpg" alt="White laptop">
+            <img src="./Images/White_laptop01.jpg" alt="White laptop">
              <h2>Tecnoduck</h2>
              <p>Sitios-web</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/Basketball02.jpg" alt="PLaying Basketball">
+            <img src="./Images/Basketball02.jpg" alt="PLaying Basketball">
              <h2>Póster de Nueva Orleans vs Estrella Dorada</h2>
              <p>Diseño</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/SeaFood03.jpg" alt="Poster sea restaurant">
+            <img src="./Images/SeaFood03.jpg" alt="Poster sea restaurant">
              <h2>Restaurante Seafood</h2>
              <p>Aplicaciones</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/headphones04.jpg" alt="Black headphones">
+            <img src="./Images/headphones04.jpg" alt="Black headphones">
              <h2>Proyecto Prime</h2>
              <p>Sitios-web</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/boxes05.jpg" alt="Black headphones">
+            <img src="./Images/boxes05.jpg" alt="Black headphones">
              <h2>Proyecto Prime</h2>
              <p>Aplicaciones</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/pc06.jpg" alt="Black headphones">
+            <img src="./Images/pc06.jpg" alt="Black headphones">
              <h2>La inspiración no tiene límites</h2>
              <p>Sitios-web</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/magazine07.jpg" alt="Magazine">
+            <img src="./Images/magazine07.jpg" alt="Magazine">
              <h2>Edición Limitada</h2>
              <p>Diseño</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/labtag08.jpg" alt="Etiqueta impresa">
+            <img src="./Images/labtag08.jpg" alt="Etiqueta impresa">
              <h2>Proyecto LAB</h2>
              <p>Marketing</p>
          </li>
          <li>
-            <img src="./goit-markup-hw-02/Images/black_laptop09.jpg" alt="Black laptop">
+            <img src="./Images/black_laptop09.jpg" alt="Black laptop">
              <h2>Negocio en Crecimiento</h2>
              <p>Aplicaciones</p>
          </li>
