--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
     </section>
     <section>
         <h2>NUESTRO EQUIPO</h2>
-        <img src="./images/001.jpg" alt="Andrés Cubo">
+        <img src="./images/imagenprs1.jpg" alt="Andrés Cubo">
         <h3>Andrés Cubo</h3>
         <p>Diseñador de Productos</p>
-        <img src="./images/002.jpg" alt="Carla Palacios">
+        <img src="./images/imagenprs2.jpg" alt="Carla Palacios">
         <h3>Carla Palacios</h3>
         <p>Desarrolladora Frontend</p>
-        <img src="./images/003.jpg" alt="Mario Dorado">
+        <img src="./images/imagenprs3.jpg" alt="Mario Dorado">
         <h3>Mario Dorado</h3>
         <p>Marketing</p>
-        <img src="./images/004.jpg" alt="Pablo Mijangos">
+        <img src="./Images/imagenprs4.jpg" alt="Pablo Mijangos">
         <h3>Pablo Mijangos</h3>
         <p>Disenador IU</p>
     </section>
