--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
     <section>
         <h2>A QUE NOS DEDICAMOS</h2>
         <ul>
-            <li><img src="./images/img1.jpg" alt="Persona tecleando"></li>
-            <li><img src="./images/img2.jpg" alt="Persona celular en mano"></li>
-            <li><img src="./images/img3.jpg" alt="Persona tablet en mano"></li>
+            <li><img src="./Images/img1.jpg" alt="Persona tecleando"></li>
+            <li><img src="./Images/img2.jpg" alt="Persona celular en mano"></li>
+            <li><img src="./Images/img3.jpg" alt="Persona tablet en mano"></li>
         </ul>
     </section>
     <section>
         <h2>NUESTRO EQUIPO</h2>
-        <img src="./images/imagenprs1.jpg" alt="Andrés Cubo">
+        <img src="./Images/imagenprs1.jpg" alt="Andrés Cubo">
         <h3>Andrés Cubo</h3>
         <p>Diseñador de Productos</p>
-        <img src="./images/imagenprs2.jpg" alt="Carla Palacios">
+        <img src="./Images/imagenprs2.jpg" alt="Carla Palacios">
         <h3>Carla Palacios</h3>
         <p>Desarrolladora Frontend</p>
-        <img src="./images/imagenprs3.jpg" alt="Mario Dorado">
+        <img src="./Images/imagenprs3.jpg" alt="Mario Dorado">
         <h3>Mario Dorado</h3>
         <p>Marketing</p>
         <img src="./Images/imagenprs4.jpg" alt="Pablo Mijangos">
