--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <div>
             <nav>
-                <a href="">WebStudio</a>
-                    <a href="./index.html">Studio</a>
+                <a class="BlueLyric titulo" href="">WebStudio</a>
+                    <a class="hover" href="./index.html">Studio</a>
                     <a href="./portafolio.html">Portafolio</a>
                     <a href="">Contactos</a>
                     <a href="">info@devstudio.com</a>
@@ -20,7 +21,7 @@
         </div>
     </header>
     <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-    <button type="button">Solicite nuestro servicio</button>
+    <button class="button:hover" type="button">Solicite nuestro servicio</button>
     <section>
        <ul>
         <li>
@@ -44,29 +45,29 @@
     <section>
         <h2>A QUE NOS DEDICAMOS</h2>
         <ul>
-            <li><img src="./Images/img1.jpg" alt="Persona tecleando"></li>
-            <li><img src="./Images/img2.jpg" alt="Persona celular en mano"></li>
-            <li><img src="./Images/img3.jpg" alt="Persona tablet en mano"></li>
+            <li><img src="./Images/img1.jpg" width="373" alt="Persona tecleando"></li>
+            <li><img src="./Images/img2.jpg" width="373" alt="Persona celular en mano"></li>
+            <li><img src="./Images/img3.jpg" width="373" alt="Persona tablet en mano"></li>
         </ul>
     </section>
     <section>
         <h2>NUESTRO EQUIPO</h2>
-        <img src="./Images/imagenprs1.jpg" alt="Andrés Cubo">
+        <img src="./Images/imagenprs1.jpg" width="270" alt="Andrés Cubo">
         <h3>Andrés Cubo</h3>
         <p>Diseñador de Productos</p>
-        <img src="./Images/imagenprs2.jpg" alt="Carla Palacios">
+        <img src="./Images/imagenprs2.jpg" width="270" alt="Carla Palacios">
         <h3>Carla Palacios</h3>
         <p>Desarrolladora Frontend</p>
-        <img src="./Images/imagenprs3.jpg" alt="Mario Dorado">
+        <img src="./Images/imagenprs3.jpg" width="270" alt="Mario Dorado">
         <h3>Mario Dorado</h3>
         <p>Marketing</p>
-        <img src="./Images/imagenprs4.jpg" alt="Pablo Mijangos">
+        <img src="./Images/imagenprs4.jpg" width="270" alt="Pablo Mijangos">
         <h3>Pablo Mijangos</h3>
         <p>Disenador IU</p>
     </section>
 <footer>
     <address>
-        <h3>WebStudio</h3>
+        <h3 class="BlueLyric">WebStudio</h3>
         Calz. Ticomán 500, Ciudad de México, CDMX, México
         info@example.com
         +52 55 5529 6000 
