--- a/portafolio.html
+++ b/portafolio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <link rel="stylesheet" href="/goit-markup-hw-02/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <title>Portafolio</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <nav>
                 <a class="BlueLyric titulo" href="">WebStudio</a>
                 <a href="./index.html">Studio</a>
-                <a class="BlueLyric" href="./portafolio.html">Portafolio</a>
+                <a href="./portafolio.html">Portafolio</a>
                 <a href="">Contactos</a>
                 <a href="">info@devstudio.com</a>
                 <a href="">+52 55 5529 6000</a>
